<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
              android:layout_width = "match_parent"
              android:layout_height = "wrap_content">

    <FrameLayout
        android:id = "@+id/timeline_layout"
        android:layout_marginStart = "@dimen/dp_36"
        android:layout_width = "wrap_content"
        android:layout_height = "match_parent">

        <View
            android:id = "@+id/timeline_line"
            android:layout_width = "1dp"
            android:layout_marginStart = "@dimen/dp_9"
            android:background = "@color/black"
            android:layout_height = "match_parent" />

        <View
            android:id = "@+id/timeline_dot"
            android:layout_gravity = "center_vertical"
            android:layout_height = "@dimen/dp_18"
            android:layout_width = "@dimen/dp_18"
            android:background = "@drawable/timeline_dot" />

    </FrameLayout>

    <RelativeLayout
        android:id = "@+id/timeline_text_messages"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginStart = "@dimen/dp_18"
        android:paddingTop = "@dimen/dp_18"
        android:paddingStart = "@dimen/dp_18"
        android:paddingEnd = "@dimen/dp_18"
        android:orientation = "vertical">

      <TextView
          android:id = "@+id/progress_time_label"
          android:layout_width = "wrap_content"
          android:layout_height = "wrap_content"
          android:layout_marginBottom = "@dimen/dp_9"
          android:text = "@string/label_for_time_in_progress" />


      <TextView
          android:id = "@+id/progress_time"
          android:layout_width = "wrap_content"
          android:layout_height = "wrap_content"
          android:layout_toEndOf = "@id/progress_time_label"
          android:layout_alignBaseline = "@id/progress_time_label"
          android:text = "@string/text_for_time_zone" />

      <TextView
          android:id = "@+id/progress_source_label"
          android:layout_width = "wrap_content"
          android:layout_height = "wrap_content"
          android:layout_marginBottom = "@dimen/dp_9"
          android:text = "@string/label_for_progress_source"
          android:layout_below = "@id/progress_time_label" />

      <TextView
          android:id = "@+id/progress_source"
          android:layout_width = "wrap_content"
          android:layout_height = "wrap_content"
          android:layout_toEndOf = "@id/progress_source_label"
          android:layout_alignBaseline = "@id/progress_source_label"
          android:text = "@string/text_for_progress_source" />

      <TextView
          android:id = "@+id/progress_content_label"
          android:layout_width = "wrap_content"
          android:layout_height = "wrap_content"
          android:layout_below = "@id/progress_source_label"
          android:text = "@string/label_for_progress_content" />

      <TextView
          android:id = "@+id/progress_content"
          android:layout_width = "wrap_content"
          android:layout_height = "wrap_content"
          android:layout_alignBaseline = "@id/progress_content_label"
          android:layout_toEndOf = "@id/progress_content_label"
          android:layout_marginEnd = "@dimen/dp_12"
          android:layout_marginBottom="@dimen/dp_6"
          android:text = "@string/text_for_progress_content" />

      <View
          android:layout_width = "match_parent"
          android:layout_height = "1px"
          android:background = "@color/grey"
          android:layout_alignParentBottom = "true"
          android:layout_marginEnd = "@dimen/dp_12" />

    </RelativeLayout>


</LinearLayout>