<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:layout_width = "match_parent"
    android:layout_height = "@dimen/nav_header_height"
    android:background = "@color/button_start_end_color"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    android:paddingLeft = "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:theme = "@style/ThemeOverlay.AppCompat.Dark"
    android:orientation = "vertical"
    android:gravity="center">

    <ImageView
        android:id = "@+id/student_avatar"
        android:layout_width = "@dimen/avatar_in_drawer_width"
        android:layout_height = "@dimen/avatar_in_drawer_width"
        android:paddingTop = "@dimen/nav_header_vertical_spacing"
        android:contentDescription = "@string/nav_header_desc"/>

    <TextView
        android:id="@+id/student_name"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:paddingTop = "@dimen/nav_header_vertical_spacing"
        android:text = "@string/name_in_nav_header"
        android:textAppearance = "@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/text_for_personal_info_student_number"
        android:id = "@+id/student_number" />

</LinearLayout>
