<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    tools:context = "com.zstu.natsukawa.fasterner.login.LoginActivity">

    <ImageView
        android:id = "@+id/login_background"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:contentDescription = "@string/imageview_description"/>

    <androidx.cardview.widget.CardView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart = "@dimen/dp_40"
        android:layout_marginEnd = "@dimen/dp_40"
        android:elevation = "@dimen/dp_3"
        app:contentPaddingLeft="@dimen/dp_21"
        app:contentPaddingRight="@dimen/dp_21"
        app:contentPaddingTop="@dimen/dp_40"
        app:contentPaddingBottom="@dimen/dp_40"
        app:cardCornerRadius = "@dimen/dp_5">

        <RelativeLayout
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id = "@+id/student_number_textinputlayout"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                app:counterMaxLength = "13"
                style = "@style/TextInputLayoutTheme"
                app:counterEnabled = "true"
                app:errorEnabled = "true"
                android:hint = "@string/hint_for_student_number_textinput">

            <EditText
                android:id = "@+id/student_number_edittext"
                android:labelFor = "@id/student_number_edittext"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:inputType = "text"
                tools:targetApi = "o" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id = "@+id/student_password_textinputlayout"
            android:layout_below = "@id/student_number_textinputlayout"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            style = "@style/TextInputLayoutTheme"
            android:hint = "@string/hint_for_student_password_textinput"
            app:counterMaxLength = "16"
            app:counterEnabled = "true"
            app:errorEnabled = "true"
            app:passwordToggleEnabled = "true">

            <EditText
                android:id = "@+id/student_password_edittext"
                android:labelFor = "@id/student_password_edittext"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:autofillHints = "@string/hint_for_student_password"
                android:inputType = "textPassword"
                tools:targetApi = "o" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id = "@+id/login_button"
            android:layout_width = "match_parent"
            android:layout_height = "@dimen/dp_48"
            android:layout_marginTop = "24dp"
            android:layout_marginBottom = "@dimen/dp_24"
            android:enabled = "false"
            android:layout_below = "@id/student_password_textinputlayout"
            android:layout_centerHorizontal = "true"
            android:textColor = "@color/white"
            android:gravity = "center"
            android:background="@drawable/login_register_button_style"
            android:textAppearance = "?android:attr/textAppearanceMedium"
            android:layout_marginStart = "@dimen/dp_40"
            android:text = "@string/login_button_text" />

        <TextView
             android:id = "@+id/test"
             android:layout_width = "wrap_content"
             android:layout_height = "wrap_content"
             android:layout_below="@id/login_button"
             android:layout_centerHorizontal = "true"
             android:textColor = "@color/button_start_end_color"
             android:foreground="?attr/selectableItemBackground"
             android:text = "@string/register" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>
