<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.zstu.natsukawa.fasterner.fragments.TestFragment">

    <View
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/arc_bottom_line"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/personal_info_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <com.google.android.material.card.MaterialCardView
                app:cardCornerRadius="@dimen/dp_12"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dp_9"
                app:cardElevation="3dp"
                android:layout_height="150dp"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginEnd="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_72"
                app:cardBackgroundColor="@color/white"
                android:id="@+id/cardView">

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                <TextView
                        android:id="@+id/check_student_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_18"
                        android:textColor="@color/black"
                        android:layout_centerHorizontal="true"
                        android:textStyle="bold"
                        android:text="Natsukawa"/>

                <TextView
                        android:id="@+id/check_member_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/check_student_name"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="3dp"
                        android:textSize="@dimen/sp_12"
                        android:text="commen member"/>

            </RelativeLayout>

            <TextView
                    android:id="@+id/check_move_to_person_info_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/move_to_person_info_textview_text"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_24"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/button_start_end_color"/>


        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.AppCompatImageView

                android:layout_width="104dp"
                android:layout_height="104dp"
                android:background="@drawable/circle_imageview"
                android:layout_centerHorizontal="true"
                app:layout_anchorGravity="top|center"
                android:elevation="@dimen/dp_3"
                app:layout_anchor="@+id/cardView"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/check_fragment_user_avatar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:elevation="@dimen/dp_3"
                android:layout_centerHorizontal="true"
                app:layout_anchorGravity="top|center"
                app:layout_anchor="@+id/cardView"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ImageView
            android:id="@+id/basic_test_icon"
            android:src="@mipmap/basic_test_icon"
            android:layout_below="@id/personal_info_card"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_9"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"/>

    <TextView
            android:id="@+id/basic_test_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:text="@string/basic_test"
            android:gravity="center"
            android:layout_toEndOf="@id/basic_test_icon"
            android:layout_alignBottom="@+id/basic_test_icon"
            android:layout_alignTop="@+id/basic_test_icon"/>

    <TextView
            android:id="@+id/basic_test_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/basic_test_text"
            android:layout_alignBottom="@+id/basic_test_icon"
            android:layout_alignTop="@+id/basic_test_icon"
            android:gravity="center"
            android:textSize="@dimen/sp_12"
            android:layout_marginStart="@dimen/dp_12"
            android:text="@string/basic_test_explaination"/>


    <androidx.cardview.widget.CardView
            android:id="@+id/ability_test_card"
            android:layout_below="@id/basic_test_icon"
            android:layout_marginTop="@dimen/dp_26"
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/dp_12"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_height="90dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardElevation="@dimen/dp_3"
            android:layout_marginBottom="@dimen/dp_24">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ability_test_card_icon"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ability_test_card_icon"
                    android:layout_marginStart="@dimen/dp_26"/>

            <TextView
                    android:id="@+id/ability_test_card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_15"
                    android:layout_marginStart="@dimen/dp_24"
                    android:layout_toEndOf="@id/ability_test_card_icon"
                    android:layout_alignTop="@id/ability_test_card_icon"
                    android:text="@string/ability_test_card_title"/>

            <TextView
                    android:layout_below="@id/ability_test_card_title"
                    android:layout_toEndOf="@id/ability_test_card_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/ability_test_card_title"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/ability_test_card_subtitle"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/characteristic_test_card"
            android:layout_below="@id/ability_test_card"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/dp_12"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_height="90dp"
            app:cardElevation="@dimen/dp_3">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/characteristic_test_card_icon"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/characteristic_test_card_icon"
                    android:layout_marginStart="@dimen/dp_26"/>

            <TextView
                    android:id="@+id/characteristic_test_card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_15"
                    android:layout_marginStart="@dimen/dp_24"
                    android:layout_toEndOf="@id/characteristic_test_card_icon"
                    android:layout_alignTop="@id/characteristic_test_card_icon"
                    android:text="@string/characteristic_test_card_title"/>

            <TextView
                    android:layout_below="@id/characteristic_test_card_title"
                    android:layout_toEndOf="@id/characteristic_test_card_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/characteristic_test_card_title"
                    android:layout_marginTop="@dimen/dp_10"
                    android:text="@string/characteristic_test_card_subtitle"/>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>
